--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -15,6 +15,9 @@ We show through a range of experiments that BioNumPy is considerably faster than
 
 In conclusion, we believe that BioNumPy bridges a long-lasting gap by making array programming practical for the field of biology.
 
+*Data Availability*: All data used for benchmarking are public and automatically downloaded as part of the benchmarking snakemake pipeline
+
+*Code Availability*: All code is available at https://github.com/bionumpy/bionumpy
 
 [@numpy]: doi:10.1038/s41586-020-2649-2
 [@sasse]: doi:10.1038/s41588-023-01524-6
