--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,12 +1,14 @@
 Array Programming for Biology
 =============================
 
+
+
 Python is a widely used programming language for scientific computing, in large part due to the powerful *array programming* library NumPy [@numpy], which makes it easy to write clean, vectorized and computationally efficient code for handling large datasets. A challenge with using array programming in biology is that the data is often non-numeric and variable-length (e.g. DNA sequences), inhibiting out-of-the-box use of standard array programming techniques. This may push bioinformaticians to instead rely on complex, custom pipelines of UNIX commands that are non-transparent and error-prone. Furthermore, the impracticality of developing efficient code directly in high-level languages like Python has led to tool developers almost exclusively relying on low-level languages like C and C++ (<font color='darkorange'>or hybrid implementations using e.g. Cython [@cython] or Numba [@numba]</font>), making it more difficult for computational biologists to understand and contribute to core methods in the field. 
 
-We present the BioNumPy package, which enables efficient and intuitive array programming on biological data in Python. <font color='darkorange'>Internally, this is handled by a ragged data structure (similar to [@awkwardarray]) that numerically encodes variable-length sequence data in continuous memory blocks, along with arrays describing the sequence lengths and encoding (see Supplementary Material)</font>. BioNumPy supports a broad range of bioinformatics analyses, with the main philosophy being that data structures should behave as closely as possible to standard numeric NumPy arrays. This means that BioNumPy is easy to learn for users familiar with NumPy or with array programming languages like R and Matlab. BioNumPy is open-source and freely available at https://github.com/bionumpy/bionumpy/, and can be installed through the Python package manager pip. BioNumPy comes with extensive documentation and a user guide that makes it easy to use for a wide range of molecular biology datasets and problems.
+We present the BioNumPy package, which enables efficient and intuitive array programming on biological data in Python. <font color='darkorange'>Internally, this is handled by a ragged data structure (similar to [@awkwardarray]) that numerically encodes variable-length sequence data in continuous memory blocks, along with arrays describing the sequence lengths and encoding (see Supplementary Material)</font>. BioNumPy supports a broad range of bioinformatics analyses, with the main philosophy being that data structures should behave as closely as possible to standard numeric NumPy arrays. This means that BioNumPy is easy to learn for users familiar with NumPy or with array programming languages like R and Matlab. BioNumPy is open-source and freely available at https://github.com/bionumpy/bionumpy/, and can be installed through the Python package manager <font color='darkorange'>pip</font>. BioNumPy comes with extensive documentation and a user guide that makes it easy to use for a wide range of molecular biology datasets and problems.
 
 
-BioNumPy is able to read and write biological datasets (e.g FASTQ, <font color='darkorange'>FASTA, BED, GTF,</font> BAM, or VCF-files) directly to/from NumPy-like data structures, providing efficient access to the data through an intuitive and easy-to-use API. The data is then  processed and analysed efficiently using a NumPy-like interface <font color='darkorange'>or can be combined with other biological data by using for instance BioPython [@biopython] which has a richer ecosystem</font>.
+BioNumPy is able to read and write biological datasets (e.g FASTQ, <font color='darkorange'>FASTA, BED, GTF,</font> BAM, or VCF-files) directly to/from NumPy-like data structures, providing efficient access to the data through an intuitive and easy-to-use API. The data <font color='darkorange'>can then be</font> processed and analysed efficiently using a NumPy-like interface <font color='darkorange'>or be combined with other biological data by using for instance BioPython [@biopython] which has a richer ecosystem</font>.
 
 <font color='darkorange'>In</font> Figure @fig:figure1 we showcase BioNumPy by reading sequenced reads from a FASTQ file and plotting the average base quality per read position. Both the sequences and base qualities are represented in NumPy-compatible arrays, so that NumPy-functionality like e.g. *np.mean* can be used. 
 
@@ -25,8 +27,5 @@ In conclusion, we believe that BioNumPy bridges a long-lasting gap by making arr
 [@cython]: doi:10.1109/MCSE.2010.118
 [@sasse]: doi:10.1038/s41588-023-01524-6
 [@biopython]: doi:10.1093/bioinformatics/btp163
-
-
-
 
 
